# theworld

./: .gitignore  .gitmodules  CLAUDE.md  CLEANUP_PLAN.md  GRADIENT_ISSUE.md  LICENSE  MERGE_SUMMARY.md  Makefile  README.md  REFACTOR_PLAN.md  broken_models_test.txt  env-dev.yml  gemma_vision_min24.txt  main.py  model.py  models.txt  pyproject.toml  pyrightconfig.json  test_freezing.py  test_gradient_flow.py  test_hub_workflow.py  test_lazy_loading.py  test_missing_images.py  trace_grad_disable.py  train.py
configs/: cc3m_projection_align.json  datacomp_production.json  datacomp_test.json  deepspeed_offload_1gpu.json  deepspeed_zero3_2gpu.json  deepspeed_zero3_4gpu.json  default.json  eval_blink.json  llava_pretrain_full.json  llava_pretrain_test.json  profile.json  smoke_test.json  spatial_rgpt_channel_training.json  spatial_rgpt_channel_training_all.json  spatial_rgpt_channel_training_all_fixed_mlp.json  spatial_rgpt_channel_training_all_fixed_mlp_not_it.json  spatial_rgpt_channel_training_justprojection_fixed_mlp.json  spatial_rgpt_channel_training_lmandprojection_fixed_mlp.json  spatial_rgpt_channel_vae_projection.json  spatial_rgpt_from_cc3m_lm_and_projection.json  spatial_rgpt_from_cc3m_lm_and_projection_actually_unfrozen.json  spatial_rgpt_gemma_only.json  spatial_rgpt_gemma_vision.json  spatial_rgpt_smoke_test.json  spatial_rgpt_test.json  spatial_rgpt_training.json  spatial_rgpt_training_channel.json  spatial_rgpt_vae_projection.json  vsr_training.json  vsr_training_deepspeed.json
data/: test_3_images.txt  test_images.txt
docs/: README.md  autoregressive_world_rollout.md  cosmos_full_model.txt  deepspeed_zero_analysis.md  evaluation.md  gemma_full_model.txt  huggingface_hub_upload.md  inheritance_refactoring_design.md  interactive-inference-guide.md  logit_validation_investigation.md  loss_function_and_evaluation.md  parameter_breakdown.md  refactoring_progress.md  refactoring_summary.md  retinaface_gradient_bug.md  siglip_vision_encoder_verification.md  simplified_interface.md  spatial-bbox-correspondence.md  spatial_rgpt_eval.md  world_aware_generation_plan.md
examples/: inference.py  inspect_checkpoint.py  interactive_inference.py  load_from_hub.py  simple_training.py
outputs/: spatial_rgpt_gemma_baseline_10.jsonl  spatial_rgpt_gemma_baseline_full_batched_manual_fix.jsonl  spatial_rgpt_gemma_baseline_full_batched_manual_fix_summary.txt
python/: main.py  model.py  train.py
results/: theworld.json  vsr_baseline_gemma.json  vsr_eval.json  vsr_eval_fixed.json
scripts/: analyze_profile.py  calc_accuracy.py  compare_results.py  download_openimages.sbatch  download_spatial_json.py  eval_spatial_rgpt.py  eval_spatial_rgpt_gemma.py  evaluate_blink.py  evaluate_vsr.py  explore_spatial_dataset.py  find_download_resume_point.py  inference_demo.py  judge_predictions.py  pace_setup.sh  (+12 more)
(+210 files in other folders)
