[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "TheWorld"
version = "0.1.0"
description = "Fused vision-language-world model combining Gemma 3 and Cosmos"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "diffusers>=0.34.0",
    "peft>=0.15.0",
    "torch",
    "torchaudio",
    "torchvision",
    "transformers>=4.56.0",
    "datasets>=3.0.0",
    "accelerate>=1.0.0",
    "evaluate>=0.4.0",
    "pillow>=10.0.0",
    "requests>=2.31.0",
    "huggingface-hub>=0.20.0",
    "scikit-learn>=1.3.0",
    "opencv-python>=4.12.0.88",
    "better-profanity>=0.7.0",
    "imageio>=2.37.0",
    "imageio-ffmpeg>=0.6.0",
    "ijson>=3.3.0",
    "nltk>=3.9.2",
    "retinaface-py>=0.0.2",
    "scikit-image>=0.25.2",
    "sentencepiece>=0.2.1",
    "deepspeed>=0.15.0",
    "safetensors>=0.4.0",
    "boto3>=1.40.64",
    "bitsandbytes>=0.48.2",
]

[dependency-groups]
dev = [
    "black>=24.0.0",
    "wandb>=0.18.0",
    "tensorboard>=2.18.0",
    "pyright>=1.1.0",
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
]

[tool.setuptools]
packages = ["theworld"]
package-dir = {"" = "python"}

[tool.black]
line-length = 120
target-version = ["py312"]
